source/stylesheets/main.css.scss
@import "settings";
@import "asciidoc";
@import "burger";

body {
  overflow-x: hidden;
}

header {
  position: fixed;
  top: 0;
  z-index: 500;
  width: 100%;
  height: $page-header-height;
  line-height: $page-header-height;
  padding: 0 $padding;
  background: white;
  border-bottom: 1px solid $border-color;
}

#main-wrapper {
  min-height: 100vh;
  margin-top: $page-header-height;
  margin-left: $navbar-width;
  overflow-x: auto;
  background: white;
}

.main-content {
  clear: both;
  max-width: $content-max-width;
  margin: auto;
  padding: $padding;
}

footer {
  width: 100%;
  margin: 0 auto 1em auto;
  padding: $padding;
  border-top: 1px solid $border-color;
  text-align: center;
  text-rendering: optimizeLegibility;
  font-size: $small-font-size;
  font-weight: 400;
}

header, footer {
  a {
    color: $body-font-color;
  }
  a:active, a:focus, a:hover {
    text-decoration: underline;
  }
}

.header-logo {
  // These values are hacked to get the logo on the same position as on
  // the new web.
  height: 1.73rem;
  margin-top: -0.5rem;
}

.navbar {
  position: fixed;
  left: 0;
  width: $navbar-width;
  height: 100%;
  overflow-x: hidden;
  overflow-y: auto;
  padding-top: 0.4rem;
  background: #f8f8f8;
  border-right: 1px solid $border-color;
  font-size: $small-font-size;
  line-height: 1.2;

  a {
    color: $body-font-color;
  }
  a.current {
    color: $primary-color;
    text-decoration: none;
  }

  ul {
    list-style: none;
    padding-right: 0.2em;
  }
  & > ul {
    margin-left: $padding;
  }

  li {
    padding-top: 0.8em;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
  }
}

.toolbar {
  width: 100%;
  padding: 0.7rem $padding;
  font-size: $small-font-size;
  text-rendering: optimizeLegibility;
}

.toolbar-actions {
  display: inline;
  float: right;
  margin: 0;
  list-style: none;

  & > li {
    display: inline-block;
    padding: 0 0.3em;
  }
}

.icon {
  display: inline-block;
  width: 1.2em;
  height: 1.2em;
  margin: 0 0.25em;
  vertical-align: text-bottom;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
}


// Styles for small screen

// Hide the checkbox, but keep it accessible.
#navbar-toggle {
  position: absolute;
  top: -99px;
  left: -99px;
}

label[for="navbar-toggle"] {
  visibility: hidden;
}

@media only screen and (max-width: $navbar-width + $content-max-width * 1.25) {
  $page-header-height: $page-header-height * 0.7;

  header {
    height: $page-header-height;
    line-height: $page-header-height;
    text-align: center;
  }

  .header-logo {
    height: $page-header-height * 0.6;
  }

  .navbar {
    width: 90%;
    max-width: $navbar-width;
    z-index: -100;
  }

  label[for="navbar-toggle"] {
    position: fixed;
    top: 0;
    left: 0;
    height: $page-header-height;
    width: $page-header-height;
    padding: 0.8rem 0 0 0.8rem;
    visibility: visible;
    z-index: 1000;
    cursor: pointer;
  }

  .icon-burger {
    @include icon-burger(1.3em, 1.1em, 4px, $body-font-color);
  }

  #main-wrapper {
    margin-top: $page-header-height;
    margin-left: 0;
    transition: transform 250ms ease;
  }

  // When the checkbox is checked (i.e. user click/tap on the label)...
  #navbar-toggle:checked {

    // Slide the #main-wrapper over.
    // NOTE: translateZ and scale is used as a hack to get smoother animation;
    // it forces browser to render the animation on GPU.
    & ~ #main-wrapper {
      // Ch <36, Saf 5.1+, iOS < 9.2, An =<4.4.4
      -webkit-transform: translateZ(0) translateX($navbar-width) scale(1);
              transform: translateZ(0) translateX($navbar-width) scale(1);
    }

    // Change z-index of the navbar to be over the #main-wrapper. This is
    // fallback for old browsers that don't support transform and transition.
    //
    // NOTE: It'd be more straightforward to just translate some position
    // property of #main-wrapper instead of using translateX, but that would
    // provide worse performance. This approach is better.
    & ~ .navbar {
      // Delay change of z-index until transition of the #main-wrapper is
      // finished (to not disrupt the transition effect on modern browsers).
      transition: z-index 300ms step-end;
      z-index: 100;
    }

    // Transform the hamburger icon into a cross.
    & ~ label[for="navbar-toggle"] > .icon-burger {
      @include icon-burger-cross;
    }
  }
}


dt, th.tableblock, td.content, div.footnote {
  // NOTE text-rendering is already set for p.
  text-rendering: optimizeLegibility;
}

// Use smaller font size in sidebar block and regular table cells.
.sidebarblock p, .sidebarblock dt, .sidebarblock td.content, p.tableblock {
  font-size: $small-font-size;
}

@import "print";

